--- a/app/views/user/dashboard.html.slim
+++ b/app/views/user/dashboard.html.slim
@@ -1,1 +1,19 @@
-h2 Hello World
+#dashboard.container.mt-3
+  #match-list
+    .card.match-list__header
+      .card-header UPCOMING MATCHES
+
+    - @matches.each do |match|
+      .card.match-list__card
+        .card-header.d-flex.justify-content-around.match-list__card-header id="match#{match.id}-header" data-toggle="collapse" data-target="#match#{match.id}-details" aria-expanded="true" aria-controls="match#{match.id}-details"
+          = image_tag 'flags/brazil.png', class: 'match-card__flag match-card__left-flag'
+          .d-none.d-md-block.my-auto.match-card__team-name #{match.team_1.full_name.capitalize}
+          .d-md-none.my-auto.match-card__team-name #{match.team_1.short_name.upcase}
+          .match-card__kick-off.ml-auto.mr-auto.my-auto
+            .kick-off__date May 18
+            .kick-off__time 18:00
+          .d-none.my-auto.d-md-block.match-card__team-name.text-right #{match.team_2.full_name.capitalize}
+          .d-md-none.my-auto.match-card__team-name.text-right #{match.team_2.short_name.upcase}
+          = image_tag 'flags/argentina.png', class: 'match-card__flag match-card__right-flag'
+        .collapse.show id="match#{match.id}-details" aria-labelledby="match#{match.id}-header" data-parent="#match-list"
+          .card-body Match 1 Details
