--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -14,7 +14,7 @@
 
 .match-list__card-header {
   color: white;
-  font-size: 20px;
+  font-size: 22px;
   padding: 0;
   background-color: #0074B1;
 }
@@ -24,20 +24,25 @@
 }
 
 .match-card__left-flag {
-  margin-right: 5px;
+  margin-left: 5px;
   #border-right: 3px solid white;
 }
 
 .match-card__right-flag {
-  margin-left: 5px;
+  margin-right: 5px;
   #border-left: 3px solid white;
 }
 
 .match-card__kick-off {
+  background-color: #E5C685;
   font-size: 12px;
   text-align: center;
+  min-width: 17%;
+  padding-top: 7px;
+  padding-bottom: 7px;
 }
 
 .match-card__team-name {
-  min-width: 20%;
+  min-width: 28%;
+  font-weight: bold;
 }
