Show the right flags and kick off time

--- a/app/views/user/dashboard.html.slim
+++ b/app/views/user/dashboard.html.slim
@@ -9,11 +9,11 @@
 
           .d-none.d-md-block.my-auto.match-card__team-name.text-right #{match.team_1.full_name.capitalize}
           .d-md-none.my-auto.match-card__team-name.text-right #{match.team_1.short_name.upcase}
-          = image_tag 'flags/brazil.png', class: 'match-card__flag match-card__left-flag'
+          = image_tag match.team_1.flag, class: 'match-card__flag match-card__left-flag'
           .match-card__kick-off.my-auto
-            .kick-off__date May 18
-            .kick-off__time 18:00
-          = image_tag 'flags/argentina.png', class: 'match-card__flag match-card__right-flag'
+            .kick-off__date #{match.kick_off.strftime('%b %e')}
+            .kick-off__time #{match.kick_off.strftime('%H:%M')}
+          = image_tag match.team_2.flag, class: 'match-card__flag match-card__right-flag'
           .d-none.my-auto.d-md-block.match-card__team-name.text-left #{match.team_2.full_name.capitalize}
           .d-md-none.my-auto.match-card__team-name.text-left #{match.team_2.short_name.upcase}
 
