--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -16,15 +16,16 @@
   color: white;
   font-size: 22px;
   padding: 0;
-  background-color: #0074B1;
+  background-color: #015386;
   border: 0;
+  height: 50px;
 }
 .match-list__card-header:first-child {
   border-radius: 0;
 }
 
 .match-card__flag {
-  height: 50px;
+  height: 100%;
 }
 
 .match-card__left-flag {
@@ -38,13 +39,13 @@
 }
 
 .match-card__kick-off {
-  background-color: #E5C685;
+  background-color: #0074B1;
   font-size: 12px;
   text-align: center;
-  color: black;
-  min-width: 17%;
-  padding-top: 7px;
-  padding-bottom: 7px;
+  height: 100%;
+  padding: .5rem;
+  border-left: 1px solid white;
+  border-right: 1px solid white;
 }
 
 .match-card__team-name {
