Group matches on the dashboard by day
Used gem 'groupdate' to make things simpler. Also polished the
styling a bit.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,8 +17,11 @@ body {
 }
 
 .header-bg {
-  background-image: asset_url('navbar-bg.jpg');
+  background-image: asset_url('navbar-bg-red.png');
   background-size: cover;
+  @include media-breakpoint-up(md) {
+    background-size: 100%;
+  }
 }
 
 .navbar-logo {
