--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,19 +1,24 @@
 @import "bootstrap";
 @import "users";
+@import "devise";
 
 html {
   height: 100%;
 }
 
-body {
+.body-with-bg {
   min-height: 100%;
-  background-image: asset-url('Russia_2018_BG.jpg');
   background-position: center;
   background-repeat: no-repeat;
+  background-image: asset-url('Russia_2018_BG.jpg');
   background-size: cover;
   @include media-breakpoint-up(md) {
     background-size: 100% 100%;
   }
+}
+
+.body-with-bg--zabivaka {
+  background-image: asset-url('Zabivaka_login.jpg');
 }
 
 .header-bg {
