--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,9 +5,9 @@ html lang='en'
     meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
     title World Cup 2018
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-  body
+  body.body-with-bg
     header.header-bg
       .container
         nav.navbar.navbar-expand-lg.navbar-light.rounded-bottom
@@ -24,5 +24,5 @@ html lang='en'
               li.nav-item.navbar-nav__nav-item
                 a.nav-link.white-text href='#' Match Results
               li.nav-item.navbar-nav__nav-item
-                a.nav-link.white-text href='#' Log Out
+                = link_to('Logout', destroy_user_session_path, method: :delete, class: 'nav-link white-text')
     = yield
