Avoid repeating match date on the cards

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -49,6 +49,10 @@
   border-right: 1px solid white;
 }
 
+.kick-off__time {
+  margin: auto;
+}
+
 .match-card__team-name {
   min-width: 28%;
   font-weight: bold;
