--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -49,6 +49,10 @@
   border-right: 1px solid white;
 }
 
+.match-card__card-body {
+  padding: 0;
+}
+
 .kick-off__time {
   margin: auto;
 }
@@ -57,3 +61,35 @@
   min-width: 28%;
   font-weight: bold;
 }
+
+.prediction-form__field {
+  width: 200px;
+  border-radius: 0;
+  margin: 5px 0;
+}
+
+.prediction-form__notice {
+  background-color: #F5EED5;
+  margin: 20px 0 5px 0;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+}
+
+.prediction-form__notice--predicted {
+  background-color: greenyellow;
+}
+
+.prediction-form__notice--error {
+  border: 2px solid red;
+}
+
+.prediction-form__notice-subtext {
+  font-size: 12px;
+  font-weight: lighter;
+  margin: 5px 0;
+}
+
+
+
+
