--- a/app/views/user/dashboard.html.slim
+++ b/app/views/user/dashboard.html.slim
@@ -17,7 +17,7 @@
               = image_tag match.team_2.flag, class: 'match-card__flag match-card__right-flag'
               .d-none.my-auto.d-md-block.match-card__team-name.text-left #{match.team_2.full_name.capitalize}
               .d-md-none.my-auto.match-card__team-name.text-left #{match.team_2.short_name.upcase}
-            .collapse.show id="match#{match.id}-details" aria-labelledby="match#{match.id}-header" data-parent="#match-list"
+            .collapse id="match#{match.id}-details" aria-labelledby="match#{match.id}-header" data-parent="#match-list"
               .card-body.match-card__card-body
                 - prediction = current_user.predictions.where(match: match).first || Prediction.new
                 = form_with model: prediction, class: 'row js-new-prediction-form', data: { match_id: match.id } do |f|
