--- a/app/views/user/dashboard.html.slim
+++ b/app/views/user/dashboard.html.slim
@@ -7,8 +7,9 @@
           .card-header #{day.strftime('%b %d')}
 
         - matches.each do |match|
+          - prediction = current_user.predictions.where(match: match).first || Prediction.new
           .card.match-list__card
-            .card-header.d-flex.justify-content-center.match-list__card-header id="match#{match.id}-header" data-toggle="collapse" data-target="#match#{match.id}-details" aria-expanded="true" aria-controls="match#{match.id}-details"
+            .card-header.d-flex.justify-content-center.match-list__card-header class="#{prediction.persisted? ? 'match-list__card-header--predicted' : ''}" id="match#{match.id}-header" data-toggle="collapse" data-target="#match#{match.id}-details" aria-expanded="true" aria-controls="match#{match.id}-details"
               .d-none.d-md-block.my-auto.match-card__team-name.text-right #{match.team_1.full_name.capitalize}
               .d-md-none.my-auto.match-card__team-name.text-right #{match.team_1.short_name.upcase}
               = image_tag match.team_1.flag, class: 'match-card__flag match-card__left-flag'
@@ -19,7 +20,6 @@
               .d-md-none.my-auto.match-card__team-name.text-left #{match.team_2.short_name.upcase}
             .collapse id="match#{match.id}-details" aria-labelledby="match#{match.id}-header" data-parent="#match-list"
               .card-body.match-card__card-body
-                - prediction = current_user.predictions.where(match: match).first || Prediction.new
                 = form_with model: prediction, class: 'row js-new-prediction-form', data: { match_id: match.id } do |f|
                   .col-md-2
                   .form-group.d-flex.flex-column.col-md-8.align-items-center
