Replace team selection with score inputs in prediction form

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -100,6 +100,16 @@
   margin: 5px 0;
 }
 
+.prediction-form__score-inputs {
+  width: 200px;
+}
+
+.prediction-form__score-input {
+  width: 60px;
+  border: 1px solid;
+  text-align: center;
+}
+
 
 
 
