Update prediction form for knockout matches

--- a/app/views/user/_prediction_form.html.slim
+++ b/app/views/user/_prediction_form.html.slim
@@ -5,6 +5,10 @@
     .d-flex.justify-content-between.prediction-form__score-inputs
       = f.number_field :team_1_goals, class: 'prediction-form__score-input', min: 0, max: 20
       = f.number_field :team_2_goals, class: 'prediction-form__score-input', min: 0, max: 20
+    - if match.knock_out?
+      .prediction-form__decider-select.align-items-center
+        = f.label :decider, 'Select Decider', for: 'prediction_decider', class: 'prediction-form__decider-label'
+        = f.select :decider, options_for_select(Match.valid_decider_types), {}, { id: 'prediction_decider', class: 'form-control text-center' }
     - submit_text = prediction.persisted? ? 'Update' : 'Submit'
     = f.submit submit_text, class: 'btn btn-primary prediction-form__field'
   .col-md-2
