--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -101,6 +101,7 @@
 }
 
 .prediction-form__score-inputs {
+  padding-top: 5px;
   width: 200px;
 }
 
@@ -108,6 +109,19 @@
   width: 60px;
   border: 1px solid;
   text-align: center;
+}
+
+.prediction-form__decider-select {
+  align-items: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.prediction-form__decider-label {
+  padding: 5px 5px 5px 5px;
+  text-align: center;
+  width: 100%;
+  background-color: #F5EED5;
 }
 
 
