Add a blinking live status for ongoing matches
For now, a match is assumed to be ongoing for 2 hours from
kick-off time

--- a/app/assets/stylesheets/users/dashboard.scss
+++ b/app/assets/stylesheets/users/dashboard.scss
@@ -67,6 +67,19 @@
   min-width: 34px;
 }
 
+.kick-off__live {
+  margin: auto;
+  min-width: 34px;
+  color: red;
+  animation:blinkingText 2s infinite;
+}
+
+@keyframes blinkingText{
+  0%{		color: red;	}
+  50%{	color: transparent;	}
+  100%{	color: red;	}
+}
+
 .match-card__team-name {
   min-width: 28%;
   font-weight: bold;
