Allow user to change her password.
Have added a navbar dropdown with 'Change Password'. Need to
polish with flash handling etc.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,3 +45,10 @@ html {
     }
   }
 }
+
+.navbar__dropdown-menu {
+  background-color: darkred;
+  :hover {
+    background-color: darkred;
+  }
+}
