--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,6 +22,13 @@ html lang='en'
                 a.nav-link.white-text href='#' Dashboard
               li.nav-item.navbar-nav__nav-item
                 a.nav-link.white-text href='#' Leaderboard
-              li.nav-item.navbar-nav__nav-item
+              li.nav-item.navbar-nav__nav-item.d-lg-none
+                = link_to('Change Password', edit_user_registration_path, class: 'nav-link white-text')
+              li.nav-item.navbar-nav__nav-item.d-lg-none
                 = link_to('Logout', destroy_user_session_path, method: :delete, class: 'nav-link white-text')
+              li.nav-item.dropdown.d-none.d-lg-block
+                a.nav-link.dropdown-toggle.white-text href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" #{current_user.nick_name}
+                .dropdown-menu.navbar__dropdown-menu.dropdown-menu-right aria-labelledby="navbarDropdown"
+                  = link_to('Change Password', edit_user_registration_path, class: 'nav-item white-text dropdown-item')
+                  = link_to('Logout', destroy_user_session_path, method: :delete, class: 'nav-item white-text dropdown-item')
     = yield
