--- a/app/views/user/_completed_matches_data.html.slim
+++ b/app/views/user/_completed_matches_data.html.slim
@@ -16,4 +16,5 @@
           .d-none.my-auto.d-md-block.match-card__team-name.text-left #{match.team_2.full_name.capitalize}
           .d-md-none.my-auto.match-card__team-name.text-left #{match.team_2.short_name.upcase}
         .collapse id="match#{match.id}-details" aria-labelledby="match#{match.id}-header" data-parent="#match-list"
-          .card-body.match-card__card-body Test
+          .card-body.match-card__card-body
+            | #{results[match.id]}
