--- a/app/views/user/dashboard.html.slim
+++ b/app/views/user/dashboard.html.slim
@@ -49,5 +49,5 @@
                     - if !match.locked?
                       = render 'prediction_form', prediction: prediction, match: match
         - if @completed_matches.present?
-          = render 'completed_matches_data', completed_matches: @completed_matches
+          = render 'completed_matches_data', completed_matches: @completed_matches, results: @results
     .col-md-2
